# test_sublime

./: .gitignore  CMake.sublime-build  CMakeLists.txt  CMakePresets.json  CMakeUserPresets - 模板.json  main.cpp  widget.cpp  widget.h  widget.ui
.github/workflows/: cd.yml  ci.yml  release.yml
